--- a/StoreFront/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 									Discover a refreshing oasis of flavor, where every sip is an adventure. From revitalizing energy drinks to soothing teas, our diverse selection of beverages is curated to satisfy every craving. Not sure where to start? Well you can truly never go wrong with Coca-Cola.
 								</p>
 								<div class="add-bag d-flex align-items-center">
-									<a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
+									<a class="add-btn" href="~/Products/Details/2"><span class="lnr lnr-cross"></span></a>
 									<span class="add-text text-uppercase">Add to Bag</span>
 								</div>
 							</div>
