--- a/StoreFront/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -29,7 +29,7 @@
     <a asp-action="Create" style="font-size: 1em;" class="genric-btn primary mt-4 mr-2">Create New Product</a>
     <a asp-action="TiledProducts" style="font-size: 1em;" class="genric-btn info mt-4 ml-2">Tile View</a>
 </p>
-<section class="col-md-8 offset-md-2 col-sm-10 offset-sm-1 pb-4 pt-3 mb-4 justify-content-center">
+<section class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 pb-4 pt-3 mb-4 justify-content-center">
     <table class="table table-hover">
         <thead>
             <tr>
@@ -56,10 +56,10 @@
                 </th> *@
                 @* <th>
                     @Html.DisplayNameFor(model => model.ReorderTrigger)
-                </th> *@
+                </th>
                 <th>
                     @Html.DisplayNameFor(model => model.UnitWeightLbs)
-                </th>
+                </th> *@
                 <th>
                     @Html.DisplayNameFor(model => model.UnitSizeFlOunce)
                 </th>
@@ -102,10 +102,10 @@
                 </td> *@
                 @* <td>
                     @Html.DisplayFor(modelItem => item.ReorderTrigger)
-                </td> *@
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.UnitWeightLbs)
-                </td>
+                </td> *@
                 <td>
                     @Html.DisplayFor(modelItem => item.UnitSizeFlOunce)
                 </td>
@@ -119,16 +119,18 @@
                     @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
+                        <span>
+                            <a asp-action="Edit" asp-route-id="@item.ProductId" class="text-warning"><i class="fa fa-pencil-square text-warning"></i> Edit</a> <br />
+                        </span>
                     @* <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a> *@
                         @if (item.OrderProducts.Count() == 0)//item.OrderProducts retrieves any related records for the Product
                         {
-                            <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                            <a asp-action="Delete" asp-route-id="@item.ProductId" class="text-danger"><i class="fa fa-trash"></i> Delete</a>
                         }
                         else
                         {
                             <a disabled="true" class="text-danger" style="text-decoration: line-through;" title="Can't delete -
-                            referenced by other records.">Delete</a>
+                            referenced by other records."><i class="fa fa-ban">&nbsp;</i>Delete</a>
                         }
                 </td>
             </tr>
