--- a/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
@@ -35,7 +35,7 @@
 				<ul class="main-categories">
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#fruitsVegetable" aria-expanded="false" aria-controls="fruitsVegetable">
-							<span class="lnr lnr-arrow-right"></span>Fruits and Vegetables<span class="number">(53)</span>
+							<span class="lnr lnr-arrow-right"></span>Sodas<span class="number">(53)</span>
 						</a>
 						<ul class="collapse" id="fruitsVegetable" data-toggle="collapse" aria-expanded="false" aria-controls="fruitsVegetable">
 							<li class="main-nav-list"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -254,13 +254,13 @@
 										<h6>@Html.DisplayFor(modelItem => item.UnitPrice)</h6>
 									@* <h6 class="l-through">$210.00</h6> *@
 								</div>
-								@* <div class="prd-bottom">
+								<div class="prd-bottom">
 
-									<a href="" class="social-info">
+									<a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.ProductId" class="social-info">
 										<span class="ti-bag"></span>
 										<p class="hover-text">add to bag</p>
 									</a>
-									<a href="" class="social-info">
+									@*<a href="" class="social-info">
 										<span class="lnr lnr-heart"></span>
 										<p class="hover-text">Wishlist</p>
 									</a>
@@ -271,8 +271,8 @@
 									<a href="" class="social-info">
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
-									</a>
-								</div> *@
+									</a>*@
+								</div>
 							</div>
 						</div>
 						</a>
