--- a/StoreFront/StoreFront.UI.MVC/wwwroot/css/main.css
+++ b/StoreFront/StoreFront.UI.MVC/wwwroot/css/main.css
@@ -5823,8 +5823,23 @@ label {
 }
 
 
+@keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(405deg);
+        transform: rotate(405deg);
+    }
+}
 
 
 .product-click-link:hover img {
     animation: shake-bottom 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+.add-btn:hover .lnr-cross {
+    animation: rotate-center 7s infinite linear both;
 }
