--- a/StoreFront/StoreFront.UI.MVC/wwwroot/scss/theme/_home.scss
+++ b/StoreFront/StoreFront.UI.MVC/wwwroot/scss/theme/_home.scss
@@ -300,15 +300,18 @@
 
 .exclusive-deal-area {
 	background: #f9f9ff;
+
 	.exclusive-left {
 		position: realtive;
-		background: url(../img/exclusive.jpg) center no-repeat;
+		background: linear-gradient(90deg, rgba(255,179,0,1) 0%, rgba(170,68,0,1) 100%);
 		background-size: cover;
 		text-align: center;
 		padding: 275px 0;
+
 		@media (max-width: 1024px) {
 			padding: 175px 0;
 		}
+
 		&:before {
 			position: absolute;
 			left: 0;
@@ -319,46 +322,59 @@
 			background: #000;
 			opacity: .5;
 		}
+
 		.clock_sec {
 			padding: 0 190px;
+
 			@media (max-width: 1680px) {
 				padding: 0 135px;
 			}
+
 			@media (max-width: 1440px) {
 				padding: 0 75px;
 			}
+
 			@media (max-width: 991px) {
 				padding: 0 220px;
 			}
+
 			@media (max-width: 767px) {
 				padding: 0 130px;
 			}
+
 			@media (max-width: 575px) {
 				padding: 0 15px;
 			}
+
 			&.row {
 				margin-right: 0;
 				margin-left: 0;
 			}
+
 			h1 {
 				font-size: 36px;
 				color: #fff;
 				margin: 0;
+
 				@media (max-width: 1380px) {
 					font-size: 30px;
 				}
 			}
+
 			p {
 				color: #fff;
 				margin-bottom: 30px;
 			}
+
 			.clock-wrap {
 				background: #fff;
 				padding: 18px 0;
 				border-radius: 5px;
+
 				.clockinner {
 					color: $title-color;
 					border-right: 1px solid #eee;
+
 					h1 {
 						color: $title-color;
 						margin-bottom: 0;
@@ -366,51 +382,65 @@
 				}
 			}
 		}
+
 		.primary-btn {
 			margin-top: 40px;
 		}
 	}
+
 	.exclusive-right {
 		text-align: center;
+
 		.active-exclusive-product-slider {
 			padding: 0 230px;
+
 			@media (max-width: 1440px) {
 				padding: 0 130px;
 			}
+
 			@media (max-width: 1380px) {
 				padding: 0 168px;
 			}
+
 			@media (max-width: 1024px) {
 				padding: 0 80px;
 			}
+
 			@media (max-width: 991px) {
 				margin-top: 50px;
 			}
+
 			@media (max-width: 575px) {
 				padding: 0 15px;
 			}
+
 			.owl-nav {
 				@media (max-width: 767px) {
 					display: none;
 				}
+
 				div {
 					position: absolute;
 					left: 5%;
 					top: 50%;
 					opacity: .3;
 					@include transform(translateY(-50%));
+
 					&:hover {
 						opacity: 1;
 					}
 				}
+
 				.owl-next {
 					left: auto;
 					right: 5%;
 				}
 			}
+
 			.single-exclusive-slider {
 				@media (max-width: 991px) {
 					padding-bottom: 80px;
+
 					img {
 						max-width: 450px;
 						margin: 0 auto;
@@ -418,11 +448,13 @@
 				}
 			}
 		}
+
 		.product-details {
 			h4 {
 				font-size: 24px;
 				text-transform: uppercase;
 			}
+
 			.price {
 				h6 {
 					font-size: 14px;
@@ -430,18 +462,22 @@
 					padding-right: 15px;
 					margin-bottom: 15px;
 				}
+
 				.l-through {
 					text-decoration: line-through;
 					color: #cccccc;
 					margin-bottom: 0;
 				}
 			}
+
 			.add-bag {
 				margin: 30px 0;
+
 				.add-btn {
 					height: 30px;
 					width: 30px;
 					line-height: 32px;
+
 					span {
 						transform: rotate(0deg);
 					}
