Finished improvments to home page and updated filter options in TiledProducts view

--- a/StoreFront/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@
 					<div class="col-lg-8 col-md-8">
 						<div class="single-deal">
 							<div class="overlay"></div>
-							<img class="img-fluid w-100" src="img/category/c1.jpg" alt="">
+							<img class="img-fluid w-100" src="img/Water Image.jpg" alt="Water">
 							<a href="img/category/c1.jpg" class="img-pop-up" target="_blank">
 								<div class="deal-details">
 									<h6 class="deal-title">The Best Water</h6>
@@ -122,7 +122,7 @@
 					<div class="col-lg-4 col-md-4">
 						<div class="single-deal">
 							<div class="overlay"></div>
-							<img class="img-fluid w-100" src="img/category/c2.jpg" alt="">
+							<img class="img-fluid w-100" src="img/Discounts.jpg" alt="Digital Shopping Cart Icon">
 							<a href="img/category/c2.jpg" class="img-pop-up" target="_blank">
 								<div class="deal-details">
 									<h6 class="deal-title">Unmatched Prices</h6>
@@ -133,7 +133,7 @@
 					<div class="col-lg-4 col-md-4">
 						<div class="single-deal">
 							<div class="overlay"></div>
-							<img class="img-fluid w-100" src="img/category/c3.jpg" alt="">
+							<img class="img-fluid w-100" src="img/Smiling-face.jpg" alt="Yellow Smiling Face">
 							<a href="img/category/c3.jpg" class="img-pop-up" target="_blank">
 								<div class="deal-details">
 									<h6 class="deal-title">Happy Customers</h6>
@@ -144,7 +144,7 @@
 					<div class="col-lg-8 col-md-8">
 						<div class="single-deal">
 							<div class="overlay"></div>
-							<img class="img-fluid w-100" src="img/category/c4.jpg" alt="">
+							<img class="img-fluid w-100" src="img/Tea-drinking.jpg" alt="Lady taking a sip of tea with a sunset in the background">
 							<a href="img/category/c4.jpg" class="img-pop-up" target="_blank">
 								<div class="deal-details">
 									<h6 class="deal-title">Tea That's Unmatched</h6>
@@ -157,7 +157,7 @@
 			<div class="col-lg-4 col-md-6">
 				<div class="single-deal">
 					<div class="overlay"></div>
-					<img class="img-fluid w-100" src="img/category/c5.jpg" alt="">
+					<img class="img-fluid w-100" src="img/Soda-img.jpg" alt="Soda">
 					<a href="img/category/c5.jpg" class="img-pop-up" target="_blank">
 						<div class="deal-details">
 							<h6 class="deal-title">The Most Loved Soda's Around the World!</h6>
@@ -169,29 +169,6 @@
 	</div>
 </section>
 <!-- End category Area -->
-<!-- Start brand Area -->
-<section class="brand-area section_gap">
-	<div class="container">
-		<div class="row">
-			<a class="col single-img" href="#">
-				<img class="img-fluid d-block mx-auto" src="img/brand/1.png" alt="">
-			</a>
-			<a class="col single-img" href="#">
-				<img class="img-fluid d-block mx-auto" src="img/brand/2.png" alt="">
-			</a>
-			<a class="col single-img" href="#">
-				<img class="img-fluid d-block mx-auto" src="img/brand/3.png" alt="">
-			</a>
-			<a class="col single-img" href="#">
-				<img class="img-fluid d-block mx-auto" src="img/brand/4.png" alt="">
-			</a>
-			<a class="col single-img" href="#">
-				<img class="img-fluid d-block mx-auto" src="img/brand/5.png" alt="">
-			</a>
-		</div>
-	</div>
-</section>
-<!-- End brand Area -->
 <!-- Start related-product Area -->
 <section class="related-product-area section_gap_bottom">
 	<div class="container">
@@ -221,96 +198,88 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r2.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/15"><img src="img/t_16474d93-60ed-4640-a4bd-8701ec7cbc19.png" alt="Gatorade Endurance Bottle"></a>
 							<div class="desc">
-								<a href="#" class="title">Gatorade Endurance</a>
+								<a href="~/Products/Details/15" class="title">Gatorade Endurance</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$4.95</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r3.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/6"><img src="img/t_535fecc7-1f91-429c-843f-5755746f0f9e.png" alt="Pepsi"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/6" class="title">Pepsi</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$4.99</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r5.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/7"><img src="img/t_5202bc25-2ce8-4f11-a849-6d457fecefc3.png" alt="Dr Pepper"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/7" class="title">Dr Pepper</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$5.59</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r6.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/14"><img src="img/t_9d7a175b-f71b-46f0-aa65-be75076a4496.png" alt="Starbucks Bottled Frappuccino Mocha"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/14" class="title">Starbucks Frappuccino Mocha</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$5.95</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r7.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/"><img src="img/t_59e55319-01a1-4653-b327-6834e2b48180.png" alt="Coca Cola"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/" class="title">Coca Cola</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$2.99</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r9.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/2"><img src="img/t_5ac7d993-4724-4f8a-b15c-0d1625af7584.png" alt="Pure Leaf Sweet Tea"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/2" class="title">Pure Leaf Sweet Tea</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$4.29</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r10.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/11"><img src="img/t_a7a3f9ee-6abd-48a1-a441-6a59293655fd.png" alt="Aquafina Bottled Water"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/11" class="title">Aquafina Water</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$19.99</h6>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="single-related-product d-flex">
-							<a class="bg-light" href="#"><img src="img/r11.jpg" alt=""></a>
+							<a class="bg-light" href="~/Products/Details/9"><img src="img/t_dfd43f12-20c2-4ce3-81ee-5903e3a9b748.png" alt="Red Bull"></a>
 							<div class="desc">
-								<a href="#" class="title">Black lace Heels</a>
+								<a href="~/Products/Details/9" class="title">Red Bull</a>
 								<div class="price">
-									<h6>$189.00</h6>
-									<h6 class="l-through">$210.00</h6>
+									<h6>$6.79</h6>
 								</div>
 							</div>
 						</div>
@@ -320,7 +289,7 @@
 			<div class="col-lg-3">
 				<div class="ctg-right">
 					<a href="#" target="_blank">
-						<img class="img-fluid d-block mx-auto" src="img/category/c5.jpg" alt="">
+						<img class="img-fluid d-block mx-auto" src="img/Our Favorites.jpg" alt="">
 					</a>
 				</div>
 			</div>
