--- a/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
@@ -48,7 +48,7 @@
 
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#meatFish" aria-expanded="false" aria-controls="meatFish">
-							<span class="lnr lnr-arrow-right"></span>Meat and Fish<span class="number">(53)</span>
+							<span class="lnr lnr-arrow-right"></span>Milk<span class="number">(53)</span>
 						</a>
 						<ul class="collapse" id="meatFish" data-toggle="collapse" aria-expanded="false" aria-controls="meatFish">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -60,7 +60,7 @@
 					</li>
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#cooking" aria-expanded="false" aria-controls="cooking">
-							<span class="lnr lnr-arrow-right"></span>Cooking<span class="number">(53)</span>
+							<span class="lnr lnr-arrow-right"></span>Water<span class="number">(53)</span>
 						</a>
 						<ul class="collapse" id="cooking" data-toggle="collapse" aria-expanded="false" aria-controls="cooking">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -72,7 +72,7 @@
 					</li>
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#beverages" aria-expanded="false" aria-controls="beverages">
-							<span class="lnr lnr-arrow-right"></span>Beverages<span class="number">(24)</span>
+							<span class="lnr lnr-arrow-right"></span>Juice<span class="number">(24)</span>
 						</a>
 						<ul class="collapse" id="beverages" data-toggle="collapse" aria-expanded="false" aria-controls="beverages">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -84,7 +84,7 @@
 					</li>
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#homeClean" aria-expanded="false" aria-controls="homeClean">
-							<span class="lnr lnr-arrow-right"></span>Home and Cleaning<span class="number">(53)</span>
+							<span class="lnr lnr-arrow-right"></span>Coffee<span class="number">(53)</span>
 						</a>
 						<ul class="collapse" id="homeClean" data-toggle="collapse" aria-expanded="false" aria-controls="homeClean">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -97,7 +97,7 @@
 					<li class="main-nav-list"><a href="#">Pest Control<span class="number">(24)</span></a></li>
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#officeProduct" aria-expanded="false" aria-controls="officeProduct">
-							<span class="lnr lnr-arrow-right"></span>Office Products<span class="number">(77)</span>
+							<span class="lnr lnr-arrow-right"></span>Energy<span class="number">(77)</span>
 						</a>
 						<ul class="collapse" id="officeProduct" data-toggle="collapse" aria-expanded="false" aria-controls="officeProduct">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -109,7 +109,7 @@
 					</li>
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#beauttyProduct" aria-expanded="false" aria-controls="beauttyProduct">
-							<span class="lnr lnr-arrow-right"></span>Beauty Products<span class="number">(65)</span>
+							<span class="lnr lnr-arrow-right"></span>Sports<span class="number">(65)</span>
 						</a>
 						<ul class="collapse" id="beauttyProduct" data-toggle="collapse" aria-expanded="false" aria-controls="beauttyProduct">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -121,7 +121,7 @@
 					</li>
 					<li class="main-nav-list">
 						<a data-toggle="collapse" href="#healthProduct" aria-expanded="false" aria-controls="healthProduct">
-							<span class="lnr lnr-arrow-right"></span>Health Products<span class="number">(29)</span>
+							<span class="lnr lnr-arrow-right"></span>Tea<span class="number">(29)</span>
 						</a>
 						<ul class="collapse" id="healthProduct" data-toggle="collapse" aria-expanded="false" aria-controls="healthProduct">
 							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
@@ -131,82 +131,13 @@
 							<li class="main-nav-list child"><a href="#">Meat<span class="number">(11)</span></a></li>
 						</ul>
 					</li>
-					<li class="main-nav-list"><a href="#">Pet Care<span class="number">(29)</span></a></li>
-					<li class="main-nav-list">
-						<a data-toggle="collapse" href="#homeAppliance" aria-expanded="false" aria-controls="homeAppliance">
-							<span class="lnr lnr-arrow-right"></span>Home Appliances<span class="number">(15)</span>
-						</a>
-						<ul class="collapse" id="homeAppliance" data-toggle="collapse" aria-expanded="false" aria-controls="homeAppliance">
-							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Dried Fish<span class="number">(09)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Fresh Fish<span class="number">(17)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Meat Alternatives<span class="number">(01)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Meat<span class="number">(11)</span></a></li>
-						</ul>
-					</li>
-					<li class="main-nav-list">
-						<a class="border-bottom-0" data-toggle="collapse" href="#babyCare" aria-expanded="false"
-						   aria-controls="babyCare"><span class="lnr lnr-arrow-right"></span>Baby Care<span class="number">(48)</span></a>
-						<ul class="collapse" id="babyCare" data-toggle="collapse" aria-expanded="false" aria-controls="babyCare">
-							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Dried Fish<span class="number">(09)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Fresh Fish<span class="number">(17)</span></a></li>
-							<li class="main-nav-list child"><a href="#">Meat Alternatives<span class="number">(01)</span></a></li>
-							<li class="main-nav-list child"><a href="#" class="border-bottom-0">Meat<span class="number">(11)</span></a></li>
-						</ul>
-					</li>
 				</ul>
 			</div>
 			<div class="sidebar-filter mt-50">
-				<div class="top-filter-head">Product Filters</div>
-				<div class="common-filter">
-					<div class="head">Brands</div>
-					<form action="#">
-						<ul>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="apple" name="brand"><label for="apple">Apple<span>(29)</span></label></li>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="asus" name="brand"><label for="asus">Asus<span>(29)</span></label></li>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="gionee" name="brand"><label for="gionee">Gionee<span>(19)</span></label></li>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="micromax" name="brand"><label for="micromax">Micromax<span>(19)</span></label></li>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="samsung" name="brand"><label for="samsung">Samsung<span>(19)</span></label></li>
-						</ul>
-					</form>
-				</div>
-				<div class="common-filter">
-					<div class="head">Color</div>
-					<form action="#">
-						<ul>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="black" name="color"><label for="black">Black<span>(29)</span></label></li>
-							<li class="filter-list">
-								<input class="pixel-radio" type="radio" id="balckleather" name="color"><label for="balckleather">
-									Black
-									Leather<span>(29)</span>
-								</label>
-							</li>
-							<li class="filter-list">
-								<input class="pixel-radio" type="radio" id="blackred" name="color"><label for="blackred">
-									Black
-									with red<span>(19)</span>
-								</label>
-							</li>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="gold" name="color"><label for="gold">Gold<span>(19)</span></label></li>
-							<li class="filter-list"><input class="pixel-radio" type="radio" id="spacegrey" name="color"><label for="spacegrey">Spacegrey<span>(19)</span></label></li>
-						</ul>
-					</form>
-				</div>
-				<div class="common-filter">
-					<div class="head">Price</div>
-					<div class="price-range-area">
-						<div id="price-range"></div>
-						<div class="value-wrapper d-flex">
-							<div class="price">Price:</div>
-							<span>$</span>
-							<div id="lower-value"></div>
-							<div class="to">to</div>
-							<span>$</span>
-							<div id="upper-value"></div>
-						</div>
-					</div>
-				</div>
+				<div class="top-filter-head"></div>
+				
+				
+				
 			</div>
 		</div>
 		<div class="col-xl-9 col-lg-8 col-md-7">
@@ -282,7 +213,7 @@
 			</section>
 			<!-- End Best Seller -->
 			<!-- Start Filter Bar -->
-			<div class="filter-bar d-flex flex-wrap align-items-center">
+			<!--<div class="filter-bar d-flex flex-wrap align-items-center">
 				<div class="sorting mr-auto">
 					<select>
 						<option value="1">Show 12</option>
@@ -299,7 +230,7 @@
 					<a href="#">6</a>
 					<a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 				</div>
-			</div>
+			</div>-->
 			<!-- End Filter Bar -->
 		</div>
 	</div>
@@ -307,7 +238,7 @@
 
 
 
-<p>
+<!--<p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
@@ -405,4 +336,4 @@
         </tr>
 }
     </tbody>
-</table>
+</table>-->
