--- a/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="~/img/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="~/img/favicon-32x32.png">
 	<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
@@ -44,7 +45,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light main_box">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="@Url.Action("Index", "Home")"><img src="~/img/logo.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="@Url.Action("Index", "Home")"><img src="~/img/Drinks Connect Logo.png" alt="Drinks Connect Logo"></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -68,14 +69,6 @@
 									<li class="nav-item"><a class="nav-link" href="confirmation.html">Shop Energy</a></li>
 									<li class="nav-item"><a class="nav-link" href="confirmation.html">Shop Sports</a></li>
 									<li class="nav-item"><a class="nav-link" href="confirmation.html">Shop Tea</a></li>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">About Us</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">About Our Products</a></li>
 								</ul>
 							</li>
 							<li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a></li>
@@ -180,53 +173,8 @@
 					<div class="single-footer-widget">
 						<h6>About Us</h6>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-							magna aliqua.
+							Drinks Connect is the best place to find all the best drinks and beverages online. Whether you need the taste of a nice cold Coca Cola or a tasty Starbucks Frappuccino Mocha we have it all!
 						</p>
-					</div>
-				</div>
-				<div class="col-lg-4  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Newsletter</h6>
-						<p>Stay update with our latest</p>
-						<div class="" id="mc_embed_signup">
-
-							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-							 method="get" class="form-inline">
-
-								<div class="d-flex flex-row">
-
-									<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-									 required="" type="email">
-
-
-									<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-									<div style="position: absolute; left: -5000px;">
-										<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-									</div>
-
-									<!-- <div class="col-lg-4 col-md-4">
-												<button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
-											</div>  -->
-								</div>
-								<div class="info"></div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget mail-chimp">
-						<h6 class="mb-20">Instragram Feed</h6>
-						<ul class="instafeed d-flex flex-wrap">
-							<li><img src="~/img/i1.jpg" alt=""></li>
-							<li><img src="~/img/i2.jpg" alt=""></li>
-							<li><img src="~/img/i3.jpg" alt=""></li>
-							<li><img src="~/img/i4.jpg" alt=""></li>
-							<li><img src="~/img/i5.jpg" alt=""></li>
-							<li><img src="~/img/i6.jpg" alt=""></li>
-							<li><img src="~/img/i7.jpg" alt=""></li>
-							<li><img src="~/img/i8.jpg" alt=""></li>
-						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-6 col-sm-6">
@@ -243,8 +191,8 @@
 				</div>
 			</div>
 			<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
-				<p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;@DateTime.Now.Year All rights reserved.<br />This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+				<p class="footer-text m-0 text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;@DateTime.Now.Year All rights reserved.<br />This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a><br />Drinks Connect is a fictional company. <br />This website is simply to show my capabilities as a web developer. <br />I do not sell or intend to sell any products found on this website.
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </p>
 			</div>
